objects/PMV_Sales_Process_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Approval_Status_for_Snapshots__c</fullName>
        <label>Approval Status for Snapshots</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Size_Max__c</fullName>
        <label>Deal Size Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Size_Min__c</fullName>
        <label>Deal Size Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIBU__c</fullName>
        <label>GIBU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMV_Type_Initialization__c</fullName>
        <label>PMV Type Initialization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMV_Type__c</fullName>
        <label>PMV Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectedToClose_Threshold__c</fullName>
        <label>ProjectedToClose Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Process_ID__c</fullName>
        <label>Sales Process ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subvertical_BU__c</fullName>
        <label>Subvertical BU</label>
        <type>TextArea</type>
    </fields>
    <label>PMV Sales Process Settings</label>
</CustomObject>